force-app/main/default/objects/Claim/fields/AccidentDetails__c.field-meta.xml
<CustomField>
    <fullName>AccidentDetails__c</fullName>
    <label>Forma específico del accidente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Caida de personas</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Caida de objetos</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pisadas, choques o golpes</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Atrapamientos</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Sobreesfuerzo, esfuerzo excesivo o falso</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Exposición o contacto con temperatura ex</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Exposición o contacto con la electricidad</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Exposición o contacto con sustancias noc</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>