force-app/main/default/objects/Claim/fields/AffectedBodyParts__c.field-meta.xml
<CustomField>
    <fullName>AffectedBodyParts__c</fullName>
    <label>Partes del cuerpo afectada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>Cabeza</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>Ojo</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Cuello</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>Tronco</label>
            </value>
            <value>
                <fullName>332</fullName>
                <label>Tórax</label>
            </value>
            <value>
                <fullName>333</fullName>
                <label>Abdomen</label>
            </value>
            <value>
                <fullName>400</fullName>
                <label>Miembros superiores</label>
            </value>
            <value>
                <fullName>446</fullName>
                <label>Manos</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>Miembros inferiores</label>
            </value>
            <value>
                <fullName>556</fullName>
                <label>Pies</label>
            </value>
            <value>
                <fullName>600</fullName>
                <label>Ubicaciones múltiples</label>
            </value>
            <value>
                <fullName>700</fullName>
                <label>Lesiones generales u otras</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>