force-app/main/default/objects/Claim/fields/AgentsCausingAccident__c.field-meta.xml
<CustomField>
    <fullName>AgentsCausingAccident__c</fullName>
    <label>Agentes causantes del accidente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>Máquinas y/o equipos</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Medios de transporte</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>Aparatos</label>
            </value>
            <value>
                <fullName>400</fullName>
                <label>Materiales o sustancias</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>Ambiente de trabajo (incluye superficies</label>
            </value>
            <value>
                <fullName>600</fullName>
                <label>Otros agentes no clasificados</label>
            </value>
            <value>
                <fullName>700</fullName>
                <label>Agentes no clasificados por falta de dat</label>
            </value>
            <value>
                <fullName>4400</fullName>
                <label>Radiaciones</label>
            </value>
            <value>
                <fullName>336</fullName>
                <label>Herramientas</label>
            </value>
            <value>
                <fullName>661</fullName>
                <label>Animales (vivos o productos animales)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>