force-app/main/default/objects/Claim/fields/Campo_nombre_para_la_contingencia__c.field-meta.xml
<CustomField>
    <fullName>Campo_nombre_para_la_contingencia__c</fullName>
    <formula>IF( RecordType.Name  = &quot;Contingencia AT&quot;, &quot;Contingencia&quot; , &quot;&quot;)</formula>
    <label>Campo nombre para la contingencia</label>
    <type>Text</type>
</CustomField>