force-app/main/default/objects/Claim/fields/ClaimEmail__c.field-meta.xml
<CustomField>
    <fullName>ClaimEmail__c</fullName>
    <description>Email del asegurado de una reclamación</description>
    <label>ClaimEmail</label>
    <type>Email</type>
</CustomField>