force-app/main/default/objects/Claim/fields/ClaimerDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimerDocumentNumber__c</fullName>
    <description>Número de documento del reclamante que crea la radicación del siniestro</description>
    <label>Claimer document number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>