force-app/main/default/objects/Claim/fields/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <displayFormat>RI-{00000}</displayFormat>
    <label>Número de radicación</label>
    <type>AutoNumber</type>
</CustomField>