force-app/main/default/objects/Claim/fields/ClaimSubReason__c.field-meta.xml
<CustomField>
    <fullName>ClaimSubReason__c</fullName>
    <description>CAmpo para almacenar la sub causa del siniestro</description>
    <label>Sub Causa del Evento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ClaimReasonType</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asistencia</fullName>
            </value>
            <value>
                <fullName>Cirugía</fullName>
            </value>
            <value>
                <fullName>Daños</fullName>
            </value>
            <value>
                <fullName>Educativo</fullName>
            </value>
            <value>
                <fullName>Enfermedad</fullName>
            </value>
            <value>
                <fullName>Fractura</fullName>
            </value>
            <value>
                <fullName>Gastos</fullName>
            </value>
            <value>
                <fullName>Graduación</fullName>
            </value>
            <value>
                <fullName>Hurto</fullName>
            </value>
            <value>
                <fullName>Invalidez</fullName>
            </value>
            <value>
                <fullName>Mascota</fullName>
            </value>
            <value>
                <fullName>Matrimonio</fullName>
            </value>
            <value>
                <fullName>Medicamentos</fullName>
            </value>
            <value>
                <fullName>Nacimiento</fullName>
            </value>
            <value>
                <fullName>Repatriación</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Separación</fullName>
            </value>
            <value>
                <fullName>Sobrevivencia</fullName>
            </value>
            <value>
                <fullName>Suicidio</fullName>
            </value>
            <value>
                <fullName>Violenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>