force-app/main/default/objects/Claim/fields/ContactPhoneNumber4__c.field-meta.xml
<CustomField>
    <fullName>ContactPhoneNumber4__c</fullName>
    <label>Teléfono de contacto 4</label>
    <type>Phone</type>
</CustomField>