force-app/main/default/objects/Claim/fields/CS_ApplicantReconsiderationComments__c.field-meta.xml
<CustomField>
    <fullName>CS_ApplicantReconsiderationComments__c</fullName>
    <label>Comentarios Solicitante por Reconsiderac</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>