force-app/main/default/objects/Claim/fields/CS_Asegurado_Afectado__c.field-meta.xml
<CustomField>
    <fullName>CS_Asegurado_Afectado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo Relación de búsqueda hacia el objeto Participante con el RecordType de Siniestro.</description>
    <label>Asegurado Afectado</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Reclamaciones (Asegurado Afectado)</relationshipLabel>
    <relationshipName>AseguradoAfectado</relationshipName>
    <type>Lookup</type>
</CustomField>