force-app/main/default/objects/Claim/fields/CS_Asegurado_Principal__c.field-meta.xml
<CustomField>
    <fullName>CS_Asegurado_Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo Relación de búsqueda hacia el objeto Participante con el RecordType de Siniestro.</description>
    <label>Asegurado Principal</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Reclamaciones</relationshipLabel>
    <relationshipName>AseguradosPrincipales</relationshipName>
    <type>Lookup</type>
</CustomField>