force-app/main/default/objects/Claim/fields/CS_Caso_fallo_de_tutela__c.field-meta.xml
<CustomField>
    <fullName>CS_Caso_fallo_de_tutela__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El caso surge por un fallo de tutela (SI/NO)</description>
    <label>Caso fallo de tutela</label>
    <type>Checkbox</type>
</CustomField>