force-app/main/default/objects/Claim/fields/CS_cobertura__c.field-meta.xml
<CustomField>
    <fullName>CS_cobertura__c</fullName>
    <label>Cobertura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Objetado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>