force-app/main/default/objects/Claim/fields/CS_correoReclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_correoReclamante__c</fullName>
    <label>Correo electrónico Reclamante</label>
    <type>Email</type>
</CustomField>