force-app/main/default/objects/Claim/fields/CS_CoverageType__c.field-meta.xml
<CustomField>
    <fullName>CS_CoverageType__c</fullName>
    <description>Campo que lista las coberturas asociadas a la solicitud de siniestro.</description>
    <label>Coverage type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Auxilio adicional por fallecimiento del asegurado principal (Seguro Exequial)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Auxilio de maternidad y paternidad</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Auxilio para Gastos Exequiales</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Auxilio Por Fuerza Mayor</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Auxilio por Hurto en Cajero</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Auxilio Por lote en Propiedad</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Auxilio por no utilización exequial</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Auxilio Post Destino Final</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Beneficios o renta por hospitalización</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Beneficios por Desmembración</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Cobertura Cirugía Ambulatoria</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Cobertura Indemnización Adicional por Unidad de Cuidados Intensivos</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Cobertura para Cáncer Invasivo de Mama, Cérvix Uterino y Próstata</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Desempleo Involuntario</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Enfermedades Graves</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Fallecimiento o Muerte por Cualquier Causa</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Muerte accidental (N)</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Fractura de huesos</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Gasto Exequial</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Gastos de Traslado</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Incapacidad parcial permanente (IPP)</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Incapacidad total temporal (ITT)</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Incapacidad total temporal (Tu cuota protegida)</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Incapacidad total temporal Accidental</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Incapacidad Total y Permanente (ITP)</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Incapacidad Total y Permanente Accidental (N)</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Indemnización Adicional por Homicidio (N)</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Indemnización Adicional por ITP Accidental (N)</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Indemnización Adicional por Muerte Accidental</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Medicamentos para Enfermedades Graves</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>