force-app/main/default/objects/Claim/fields/CS_DateStatusChange__c.field-meta.xml
<CustomField>
    <fullName>CS_DateStatusChange__c</fullName>
    <label>Fecha cambio de estado</label>
    <type>Date</type>
</CustomField>