force-app/main/default/objects/Claim/fields/CS_DescriptionOfObjectionReason__c.field-meta.xml
<CustomField>
    <fullName>CS_DescriptionOfObjectionReason__c</fullName>
    <label>Descripción motivo de la objeción</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>