force-app/main/default/objects/Claim/fields/CS_DescriptionOfSuspendedReason__c.field-meta.xml
<CustomField>
    <fullName>CS_DescriptionOfSuspendedReason__c</fullName>
    <label>Descripción motivo suspendido</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>