force-app/main/default/objects/Claim/fields/CS_DireccionReclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_DireccionReclamante__c</fullName>
    <description>Dirección Reclamante</description>
    <label>Dirección Reclamante</label>
    <type>TextArea</type>
</CustomField>