force-app/main/default/objects/Claim/fields/CS_DocumentoReclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_DocumentoReclamante__c</fullName>
    <description>Documento Reclamante</description>
    <label>Número Identificación Reclamante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>