force-app/main/default/objects/Claim/fields/CS_DocumentosFaltantes__c.field-meta.xml
<CustomField>
    <fullName>CS_DocumentosFaltantes__c</fullName>
    <label>Documentos Faltantes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>