force-app/main/default/objects/Claim/fields/CS_DV__c.field-meta.xml
<CustomField>
    <fullName>CS_DV__c</fullName>
    <description>Digito de verificación en Senda Medico</description>
    <label>DV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>