force-app/main/default/objects/Claim/fields/CS_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CS_ErrorMessage__c</fullName>
    <description>Campo que interactua con el mensaje de respuesta de error , con respecto ala interoperabilidad con VT.</description>
    <label>Mensaje de Error</label>
    <type>TextArea</type>
</CustomField>