force-app/main/default/objects/Claim/fields/CS_Estado_asegurado_afectado__c.field-meta.xml
<CustomField>
    <fullName>CS_Estado_asegurado_afectado__c</fullName>
    <description>Estado de cliente del asegurado afectado</description>
    <formula>CS_Asegurado_Afectado__r.PrimaryParticipantAccount.CS_ClienteActivo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado cliente del asegurado afectado</label>
    <type>Checkbox</type>
</CustomField>