force-app/main/default/objects/Claim/fields/CS_ExpectedSolutionDate__c.field-meta.xml
<CustomField>
    <fullName>CS_ExpectedSolutionDate__c</fullName>
    <label>Fecha Prevista de Solución</label>
    <type>Date</type>
</CustomField>