force-app/main/default/objects/Claim/fields/CS_ExpectedSolutionDateForm__c.field-meta.xml
<CustomField>
    <fullName>CS_ExpectedSolutionDateForm__c</fullName>
    <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 
0, (DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))) + 10), 
1, (DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))) + 10), 
2, (DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))) + 10), 
3, (DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))) + 10), 
4, (DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))) + 10), 
5, (DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))) + 12), 
6, (DATE(YEAR(DATEVALUE(CreatedDate)),MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate))) + 12), 
null)</formula>
    <label>Fecha Prevista de Solución</label>
    <type>Date</type>
</CustomField>