force-app/main/default/objects/Claim/fields/CS_Multipolicy__c.field-meta.xml
<CustomField>
    <fullName>CS_Multipolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica la Multipoliza asociada</description>
    <label>Multipoliza</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Monopilizas</relationshipName>
    <type>Lookup</type>
</CustomField>