force-app/main/default/objects/Claim/fields/CS_NombreReclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_NombreReclamante__c</fullName>
    <description>Nombre Reclamante</description>
    <label>Nombre Reclamante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>