force-app/main/default/objects/Claim/fields/CS_Numero_de_caso__c.field-meta.xml
<CustomField>
    <fullName>CS_Numero_de_caso__c</fullName>
    <description>Numero de caso es un numero interno del siniestro</description>
    <label>Número de caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>