force-app/main/default/objects/Claim/fields/CS_NumeroCertificadoAcselX__c.field-meta.xml
<CustomField>
    <fullName>CS_NumeroCertificadoAcselX__c</fullName>
    <description>Número del certificado en AcselX</description>
    <label>Número del Certificado AcselX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>