force-app/main/default/objects/Claim/fields/CS_NumeroCertificadoVT__c.field-meta.xml
<CustomField>
    <fullName>CS_NumeroCertificadoVT__c</fullName>
    <description>Número del certificado en Visual Time</description>
    <label>Número del Certificado VisualTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>