force-app/main/default/objects/Claim/fields/CS_numeroLinea__c.field-meta.xml
<CustomField>
    <fullName>CS_numeroLinea__c</fullName>
    <label>Número de línea</label>
    <length>60</length>
    <type>Text</type>
</CustomField>