force-app/main/default/objects/Claim/fields/CS_NumeroRadicacionBMP__c.field-meta.xml
<CustomField>
    <fullName>CS_NumeroRadicacionBMP__c</fullName>
    <description>Número de radicación BMP</description>
    <label>Número de radicación BMP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>