force-app/main/default/objects/Claim/fields/CS_numeroRadicacionVT__c.field-meta.xml
<CustomField>
    <fullName>CS_numeroRadicacionVT__c</fullName>
    <description>Número de radicación en Visual Time</description>
    <label>Número de radicación VT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>