force-app/main/default/objects/Claim/fields/CS_NumeroReclamacionAcselx__c.field-meta.xml
<CustomField>
    <fullName>CS_NumeroReclamacionAcselx__c</fullName>
    <description>Número del caso en AcselX</description>
    <label>Número de reclamación AcselX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>