force-app/main/default/objects/Claim/fields/CS_NumeroReclamacionBPM__c.field-meta.xml
<CustomField>
    <fullName>CS_NumeroReclamacionBPM__c</fullName>
    <description>Número de caso en el BPM</description>
    <label>Número de reclamación BPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>