force-app/main/default/objects/Claim/fields/CS_NumeroReclamacionVT__c.field-meta.xml
<CustomField>
    <fullName>CS_NumeroReclamacionVT__c</fullName>
    <description>Número del caso en Visual Time</description>
    <label>Número de reclamación VisualTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>