force-app/main/default/objects/Claim/fields/CS_Origen__c.field-meta.xml
<CustomField>
    <fullName>CS_Origen__c</fullName>
    <description>Origen del caso</description>
    <label>Origen del ATEL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Objetado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>