force-app/main/default/objects/Claim/fields/CS_ProcesoJudicial__c.field-meta.xml
<CustomField>
    <fullName>CS_ProcesoJudicial__c</fullName>
    <description>Indica si corresponde a un proceso judicial</description>
    <label>Proceso judicial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>