force-app/main/default/objects/Claim/fields/CS_ProfIndemnizaciones__c.field-meta.xml
<CustomField>
    <fullName>CS_ProfIndemnizaciones__c</fullName>
    <description>ultimo Profesional de Indemnizaciones que tiene asignado el caso</description>
    <label>Profesional de Indemnizaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>