force-app/main/default/objects/Claim/fields/CS_ReconsiderationRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CS_ReconsiderationRequestDate__c</fullName>
    <label>Fecha solicitud reconsideración</label>
    <type>Date</type>
</CustomField>