force-app/main/default/objects/Claim/fields/CS_StaffObservations__c.field-meta.xml
<CustomField>
    <fullName>CS_StaffObservations__c</fullName>
    <description>Campo obligatorio cuando pasa a estado en pagador</description>
    <label>Observaciones del personal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>