force-app/main/default/objects/Claim/fields/CS_SubEstado__c.field-meta.xml
<CustomField>
    <fullName>CS_SubEstado__c</fullName>
    <description>Sub Estado del estado actual</description>
    <label>Sub Estado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Caso gestionado</fullName>
            </value>
            <value>
                <fullName>Documentos Adicionales</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Pago Rechazado</fullName>
            </value>
            <value>
                <fullName>En Aprobación</fullName>
            </value>
            <value>
                <fullName>Documentos Solicitados</fullName>
            </value>
            <value>
                <fullName>Escalado</fullName>
            </value>
            <value>
                <fullName>Validación Asegurados</fullName>
            </value>
            <value>
                <fullName>Rechazo del Pagador</fullName>
            </value>
            <value>
                <fullName>Solicitud Reconsideración</fullName>
            </value>
            <value>
                <fullName>Rev. Profesional Salud</fullName>
            </value>
            <value>
                <fullName>Rev. Firma Investigadora</fullName>
            </value>
            <value>
                <fullName>Ejecución de pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>