force-app/main/default/objects/Claim/fields/CS_TelefonoContacto1__c.field-meta.xml
<CustomField>
    <fullName>CS_TelefonoContacto1__c</fullName>
    <description>Teléfono de contacto 1</description>
    <label>Teléfono de contacto 1</label>
    <type>Phone</type>
</CustomField>