force-app/main/default/objects/Claim/fields/CS_TelefonoContacto2__c.field-meta.xml
<CustomField>
    <fullName>CS_TelefonoContacto2__c</fullName>
    <description>Teléfono de contacto 2</description>
    <label>Teléfono de contacto 2</label>
    <type>Phone</type>
</CustomField>