force-app/main/default/objects/Claim/fields/CS_TelefonoContacto3__c.field-meta.xml
<CustomField>
    <fullName>CS_TelefonoContacto3__c</fullName>
    <description>Teléfono de contacto 3</description>
    <label>Teléfono de contacto 3</label>
    <type>Phone</type>
</CustomField>