force-app/main/default/objects/Claim/fields/CS_TipoDocumentoReclamante__c.field-meta.xml
<CustomField>
    <fullName>CS_TipoDocumentoReclamante__c</fullName>
    <label>Tipo Identificación Reclamante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CS_Tipo_identificacion_PN</valueSetName>
    </valueSet>
</CustomField>