force-app/main/default/objects/Claim/fields/CS_Todos__c.field-meta.xml
<CustomField>
    <fullName>CS_Todos__c</fullName>
    <defaultValue>&apos;todos&apos;</defaultValue>
    <description>Campo que indica el comodín de búsqueda que utilizarán los agentes al buscar todos los registros de reclamaciones</description>
    <label>Todos</label>
    <length>30</length>
    <type>Text</type>
</CustomField>