force-app/main/default/objects/Claim/fields/CS_Trabajador_Afectado__c.field-meta.xml
<CustomField>
    <fullName>CS_Trabajador_Afectado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo Relación de búsqueda hacia el objeto Participante con el RecordType de AT-EL.</description>
    <label>Trabajador Afectado</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Reclamaciones (Trabajador Afectado)</relationshipLabel>
    <relationshipName>TrabajadorAfectado</relationshipName>
    <type>Lookup</type>
</CustomField>