force-app/main/default/objects/Claim/fields/DeathDate__c.field-meta.xml
<CustomField>
    <fullName>DeathDate__c</fullName>
    <label>Fecha de muerte</label>
    <type>DateTime</type>
</CustomField>