force-app/main/default/objects/Claim/fields/DepartmentCity__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departamento/Ciudad</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>