force-app/main/default/objects/Claim/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnósticos</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GeneralCharacteristics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Diagnóstico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GeneralCharacteristics__c</referenceTo>
    <relationshipLabel>Indemnizaciones</relationshipLabel>
    <relationshipName>Indemnizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>