force-app/main/default/objects/Claim/fields/FirstNotificationDateWaitingForDocument__c.field-meta.xml
<CustomField>
    <fullName>FirstNotificationDateWaitingForDocument__c</fullName>
    <description>Campo que almacena la primera fecha de notificación</description>
    <label>Fecha primer notificación espera docs</label>
    <type>Date</type>
</CustomField>